<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/catalogFragment"
    >
    <fragment
        android:id="@+id/catalogFragment"
        android:label="@string/home_navigation_drawer_menu_catalog"
        android:name="com.example.store.ui.fragments.HomeCatalogFragment"
        tools:layout="@layout/fragment_home_catalog"
        />
    <fragment
        android:id="@+id/ordersFragment"
        android:label="@string/home_navigation_drawer_menu_orders"
        android:name="com.example.store.ui.fragments.HomeOrdersFragment"
        tools:layout="@layout/fragment_home_orders"
        />
    <fragment
        android:id="@+id/profileFragment"
        android:label="@string/home_navigation_drawer_menu_profile"
        android:name="com.example.store.ui.fragments.HomeProfileFragment"
        tools:layout="@layout/fragment_home_profile"
        />
</navigation>
