<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:padding="24dp"
    >
    <!-- Logo -->
    <ImageView
        android:id="@+id/logoImageView"
        android:contentDescription="@string/login_app_image"
        android:layout_height="120dp"
        android:layout_marginTop="32dp"
        android:layout_width="120dp"
        android:src="@drawable/ic_launcher_foreground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <!-- Usuario -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameInputLayout"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_width="match_parent"
        android:hint="@string/login_username"
        app:layout_constraintTop_toBottomOf="@id/logoImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/usernameEditText"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Contraseña -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInputLayout"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:hint="@string/login_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/usernameInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Iniciar sesión -->
    <Button
        android:id="@+id/loginButton"
        android:enabled="false"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_width="0dp"
        android:text="@string/login_sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordInputLayout"
        />

    <!-- Regístrate -->
    <TextView
        android:id="@+id/registerTextView"
        android:clickable="true"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:text="@string/login_sign_up"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginButton"
        />

    <!-- Olvidé mi contraseña -->
    <TextView
        android:id="@+id/forgotPasswordTextView"
        android:clickable="true"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:text="@string/login_forgot_my_password"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginButton"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
