<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:padding="24dp"
    >
    <!-- Logo -->
    <ImageView
        android:id="@+id/logoImageView"
        android:contentDescription="@string/login_app_image"
        android:layout_height="120dp"
        android:layout_marginTop="32dp"
        android:layout_width="120dp"
        android:src="@drawable/ic_launcher_foreground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <!-- Usuario -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameInputLayout"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_width="match_parent"
        android:hint="@string/register_username"
        app:layout_constraintTop_toBottomOf="@id/logoImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/usernameEditText"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Recuperar contraseña -->
    <Button
        android:id="@+id/resetPasswordButton"
        android:enabled="false"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_width="0dp"
        android:text="@string/forgot_password_recover"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/usernameInputLayout"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
